Fix spacing on mobile menu

--- a/components/byu-search/byu-search-mixins.sass
+++ b/components/byu-search/byu-search-mixins.sass
@@ -2,7 +2,7 @@
   display: block
   width: 100%
   padding: 12px 20px
-  line-height: 1.2
+  line-height: 25.6px
   border: 1px solid #fff
   border-bottom: 1px solid #ddd
   font-family: $font-heading
