--- a/components/byu-search/byu-search.sass
+++ b/components/byu-search/byu-search.sass
@@ -49,7 +49,7 @@
       color: $byuNavy
       display: block
       position: absolute
-      top: $spacing1
+      top: $spacing2
       right: 2px
       height: 35px
       width: 35px
