--- a/components/byu-user-info/byu-user-info.sass
+++ b/components/byu-user-info/byu-user-info.sass
@@ -45,7 +45,7 @@
       width: 1.25em
       height: 1.25em
       display: inline-block
-      vertical-align: baseline
+      position: relative
       top: 0.25em
       margin: 0 0.25em
 
